# learnMetalVulkan

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: check.yml
samples/: glfwBridge.mm  triangleVK.cpp  window.cpp  windowGL.cpp  windowGLFW.cpp  windowGlfwMtl.cpp  windowSDL.cpp  windowVK.cpp
src/: main.cpp
src/core/backend/gl/: bufferGL.cpp  bufferGL.h  bufferGl.cpp  bufferGl.h  depthStencilStateGl.cpp  depthStencilStateGl.h  descriptorSetGl.cpp  descriptorSetGl.h  deviceGL.cpp  deviceGL.h  deviceGl.cpp  deviceGl.h  glCommonDefine.h  glfwRendererGL.cpp  glfwRendererGL.h  mtlCommonDefine.h  pipelineGl.cpp  pipelineGl.h  shaderGL.cpp  shaderGL.h  textureGl.cpp  textureGl.h  vkCommonDefine.h
src/core/backend/handle/: buffer.cpp  buffer.h  component.cpp  component.h  depthStencilState.cpp  depthStencilState.h  device.cpp  device.h  glfwRenderer.cpp  glfwRenderer.h  globalCommonDefine.h  pipeline.cpp  pipeline.h  resourceLimits.cpp  resourceLimits.h  shader.cpp  shader.h  texture.cpp  texture.h
src/core/backend/mtl/: bufferMtl.cpp  bufferMtl.h  depthStencilStateMtl.cpp  depthStencilStateMtl.h  deviceMtl.cpp  deviceMtl.h  glfwBridge.mm  glfwRendererMtl.cpp  glfwRendererMtl.h  pipelineMtl.cpp  pipelineMtl.h  shaderMtl.cpp  shaderMtl.h  textureMtl.cpp  textureMtl.h
src/core/backend/vk/: bufferVk.cpp  bufferVk.h  depthStencilStateVk.cpp  depthStencilStateVk.h  descriptorSet.cpp  descriptorSet.h  descriptorSetVk.cpp  descriptorSetVk.h  deviceVk.cpp  deviceVk.h  glfwRendererVK.cpp  glfwRendererVK.h  glfwRendererVk.cpp  glfwRendererVk.h  pipelineVk.cpp  (+5 more)
src/core/common/: camera.cpp  camera.h  commonHandle.cpp  commonHandle.h  effectBase.cpp  effectBase.h  engine.cpp  engine.h
src/utils/: commonMacro.h  glCommonDefine.h  logger.cpp  logger.h  singleton.h  timer.h  utils.h  vkCommonDefine.h
tests/: windowGL.cpp  windowGlfwVK.cpp  windowSdlMtl.cpp  windowSdlVK.cpp  windowVK.cpp
tests/gl/: quadEboGl.cpp  testBasicLightingDiffuseGl.cpp  testBasicLightingGl.cpp  testCameraGl.cpp  testCubeGl.cpp  testCubeMultipleGl.cpp  testDepthTestGl.cpp  testDepthViewGl.cpp  testLightingColorsGl.cpp  testLightingDiffuseMapGl.cpp  testMaterialsGl.cpp  testQuadEboGl.cpp  testStencilTestGl.cpp  testTextureGl.cpp  testTriangleGl.cpp  testWindowGL.cpp  textureGl.cpp  triangleGl.cpp  windowGL.cpp
tests/mesh/: globalMeshs.h
tests/mtl/: quadEboMtl.cpp  testBasicLightingDiffuseMtl.cpp  testBasicLightingMtl.cpp  testCameraMtl.cpp  testCubeMtl.cpp  testCubeMultipleMtl.cpp  testDepthTestMtl.cpp  testDepthViewMtl.cpp  testLightingColorsMtl.cpp  testLightingDiffuseMapMtl.cpp  testMaterialsMtl.cpp  testQuadEboMtl.cpp  testTextureMtl.cpp  testTriangleMtl.cpp  testWindowMtl.cpp  testWindowSdlMtl.cpp  textureMtl.cpp  triangleMtl.cpp  windowGlfwMtl.cpp  windowMtl.cpp  windowSdlMtl.cpp
tests/shaders/: basicLighting.frag  checkTexCoord.frag  colors.frag  colors.vert  depth.frag  frag.spv  lightColorCube.frag  lightColorCube.vert  lightCube.frag  lightCube.vert  lightingDiffuseMap.frag  lightingDiffuseMap.vert  materials.frag  materials.vert  stencil.frag  stencil.vert  stencilSingleColor.frag  texture.frag  texture.vert  triangle.frag  triangle.vert  vert.spv
tests/vk/: demoTextureVk.cpp  demoTriangle.cpp  demoTriangle2.cpp  demoTriangleVk.cpp  demoVk.cpp  quadEboVk.cpp  test.cpp  testBasicLightingVk.cpp  testCameraVk.cpp  testCubeMultipleVk.cpp  testCubeVk.cpp  testDemoTextureVk.cpp  testDemoTriangle.cpp  testDepthTestVk.cpp  testDepthViewVk.cpp  testLightingColorsVk.cpp  testLightingDiffuseMapVk.cpp  testMaterialsVk.cpp  testQuadEboVk.cpp  testTextureVk.cpp  testTriangleVk.cpp  testWindowSdlVk.cpp  testWindowVk.cpp  textureVk.cpp  triangleVK.cpp  triangleVk.cpp  windowGlfwVK.cpp  windowSdlVK.cpp  windowSdlVk.cpp  windowVk.cpp
utils/: build-xcode.sh
